# bert-japanese

./: .python-version  README.md  masked_lm_example.ipynb  pyproject.toml
